--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=9090
+server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/healthcaredb
 #spring.datasource.url=jdbc:mysql://2.tcp.eu.ngrok.io:17177/healthcaredb
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=Jay@1998
 spring.sql.init.platform=mysql
 spring.jpa.hibernate.ddl-auto=update
