--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/healthcaredb
 spring.datasource.username=root
 spring.datasource.password=password
 spring.sql.init.platform=mysql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
