--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=9090
 spring.datasource.url=jdbc:mysql://localhost:3306/healthcaredb
 #spring.datasource.url=jdbc:mysql://2.tcp.eu.ngrok.io:17177/healthcaredb
 spring.datasource.username=root
-spring.datasource.password=Jay@1998
+spring.datasource.password=password
 spring.sql.init.platform=mysql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-autoupdate=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 springdoc.api-docs.path=/api-docs
